# proq

./: startQtcreator.bat
src/: CMakeLists.txt  main.cpp  processstate.cpp  processstate.h
